[package]
name = "realtime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tungstenite = "0.17.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "*"
url = "2.2.2"
serde_json = "1.0.82"
async-std = "1.12.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
